# todo-list-rust-actix-backend

./: .gitignore  Cargo.toml
src/: main.rs
src/models/: entry.rs  list.rs  mod.rs  parent_and_children.rs
src/prototype_db/: mod.rs
src/routes/: entry.rs  list.rs
