[package]
name = "todo-list-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
env_logger = "0.10.0"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
serde_with = "3.1.0"
uuid = { version = "1.4.1", features = ["v4"] }
